# steam-games-analytics

./: .gitignore  README.md  dbt_project.yml  load_steam_data.py  profiles.yml.example  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: dbt_run.yml  deploy_dashboard.yml
.streamlit/: config.toml
dashboard/: evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: +layout.svelte  categories.md  developers.md  engagement.md  genres.md  index.md  publishers.md
dashboard/sources/steam_games/: category_analytics.sql  connection.yaml  developer_analytics.sql  engagement_segments.sql  game_performance.sql  genre_analytics.sql  publisher_rankings.sql
models/: _sources.yml
models/marts/: _mart_sources.yml  mart_engagement_segments.sql  mart_games_performance.sql  mart_genres_analytics.sql  mart_publishers_rankings.sql
models/staging/: _stg_sources.yml  stg_games__base.sql  stg_games__cleaned.sql  stg_games__with_scores.sql
pages/: 1_Genres.py  2_Publishers.py  3_Engagement.py  4_Developers.py  5_Categories.py
streamlit_dashboard/: components.py  data.py  queries.py  theme.py
tests/: test_dates_logical.sql  test_price_range.sql  test_review_counts.sql
tests/generic/: test_review_counts_sense.sql
